--- a/src/main/resources/static/styles/style.css
+++ b/src/main/resources/static/styles/style.css
@@ -3,11 +3,16 @@
     margin:auto ;
 }
 .imagenPerfil{
-  max-width: 300px;
-  height: 300px;
-  background-color: aquamarine;
-  margin-left: 80px;
-  border-radius: 200px;
+
+
+}
+
+.imagenPerfil img{
+  
+  width: 300px;
+    border-radius: 150px;
+     border: 2px solid #999;
+       margin-left: 80px;
 }
 
 .card{
@@ -18,4 +23,17 @@
 .contenedor{
   display: flex;
   justify-content:space-between;
+}
+
+.cerrar{
+    text-decoration: none;
+}
+
+.arbol{
+    width: 800px;
+    height: 550px;
+    background-color: #DAF7A6;
+    margin:30px auto;
+    text-align : center;
+
 }
