--- a/src/main/resources/templates/contenido.html
+++ b/src/main/resources/templates/contenido.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="/images/logo1">
+
+    <title>Planetseed</title>
 </head>
 <body>
   <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -57,29 +59,34 @@
 
       <div class="contenedor">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/images/eolica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">ir a contenido</a>
+          <h5 class="card-title">Energia Eolica</h5>
+          <p class="card-text">es la energía que se obtiene a partir del viento, es decir,
+ es el aprovechamiento de la energía cinética de las masas de aire.
+</p>
+          <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
         </div>
       </div>
 
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/images/mountain-g140cb5e17_1920.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Reforestacion</h5>
+          <p class="card-text">Una operación en el ámbito de la silvicultura destinada a repoblar zonas deforestadas
+          
+            </p>
+          <a href="/resumen" class="btn btn-primary">Ir al cotenido</a>
         </div>
       </div>
       
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="/images/incendio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Medidas contra incendio</h5>
+          <p class="card-text">Ayuda a evitar la destrucción del hábitat de la fauna silvestre y a conservar plantas que generan oxígeno.
+            </p>
+          <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
         </div>
       </div>
     </div>
@@ -88,29 +95,33 @@
 
     <div class="contenedor">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/hidrocultivo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Hidrocultivo</h5>
+        <p class="card-text">"crianza de organismos en agua", 
+          relativo al resultado de trabajar y cuidar la tierra para producir planta
+          </p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
 
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/solar" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Energia Solar</h5>
+        <p class="card-text">una energía renovable, obtenida a partir del aprovechamiento de la radiación electromagnética procedente del Sol.
+        </p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
     
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/fauna" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Fauna</h5>
+        <p class="card-text">Los animales que viven libremente y fuera del control del hombre en ambientes naturales tambien son importantes.
+        </p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
   </div>
@@ -119,29 +130,31 @@
 
   <div class="contenedor">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/flora" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Flora</h5>
+        <p class="card-text">El conjunto de las plantas son propias de un ecosistema que cumplen con un ciclo equilibrado de la vida.
+         </p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
 
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/reciclaje" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Reciclaje</h5>
+        <p class="card-text">el proceso de recolección y transformación de materiales para convertirlos en nuevos productos
+        </p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
     
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="/images/arbol" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <h5 class="card-title">Como plantar un arbol</h5>
+        <p class="card-text">Si llegaste a este, llego la hora de tener tu propia experiencia aportando a cuidar este planeta.</p>
+        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
   </div>
