--- a/src/main/resources/templates/resumen.html
+++ b/src/main/resources/templates/resumen.html
@@ -12,6 +12,7 @@
     <title>Planetseed</title>
 </head>
 <body>
+     <!-- iconos de footer -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
           <title>Bootstrap</title>
@@ -27,6 +28,8 @@
           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
         </symbol>
       </svg>
+
+                <!-- Navegador -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Planetseed</a>
@@ -44,6 +47,7 @@
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
               </li>
+             
             </ul>
             <div class="d-flex">
               <a class="cerrar" href="/">cerrar sesion</a>
@@ -51,15 +55,68 @@
           </div>
         </div>
       </nav>
+          <!-- resumen de temas-->
 
-<h1>Aqui ira el cuestionario</h1>
-<a href="/resumen" class="btn btn-primary">volver al resumen</a>
+          <!-- resumen de eolica -->
+        <section id="energiaeolica">
+        <div class="position">                  
+        <h1 >¿Qué es la energía eólica? La importancia del viento como renovable</h1>
+        </div>
+          <img src="https://www.bbva.com/wp-content/uploads/2021/04/energía_eolica_apertura-e1617804810829.jpg" alt="energía_eolica_apertura-viento-sostenibilidad-renovable-no contaminante-fuentes-combustibles" title="energía_eolica_apertura-viento-sostenibilidad-renovable-no contaminante-fuentes-combustibles" class="img-fluid">          <!-- imagen banner -->
+            
+          <div class="texto">
+            <h2>  Origen de la energía eólica</h2>
+             <p> La utilización del viento como recurso energético se remonta a miles de años, de ahí que la energía eólica sea madura. Su uso iba destinado a propulsar los barcos, bombear el agua o moler el grano gracias a los tradicionales molinos de viento hasta bien entrado el siglo XIX. Fueron los pobladores del Medio Oriente quienes llevaron esta idea a Europa, lo que permitió que los habitantes de los Países Bajos adaptaran el molino de viento para drenar lagos y pantanos en el delta del río Rin. Esta tecnología llegó hasta Estados Unidos con la migración de finales del siglo XVIII y principios del XIX, sirviendo no solo como vehículo para moler el grano sino también como recurso para generar electricidad destinada a los hogares y la industria.</p> 
+             <p> En la segunda mitad del siglo XIX apareció el popular molino multipala americano, cuyas características se utilizarían para el diseño de los generadores eólicos actuales. En 1887, el científico estadounidense Charles F. Brush (1849-1929) construyó la primera turbina eólica para la generación de electricidad, que tenía un diámetro de rotor de 17 metros y 144 palas de rotor hechas de madera de cedro.</p>     
+             <p> El científico danés Poul la Cour (1846-1908) fue quien más tarde descubrió que las turbinas eólicas con pocas palas de rotor son más eficientes para la producción de electricidad que las turbinas de palas múltiples, ya que en las primeras se logra una velocidad de rotación mucho mayor que en las del tipo construido por Brush. En 1899, diseñó lo que puede calificarse como el primer generador eólico moderno.</p>
+             <img src="https://www.bbva.com/wp-content/uploads/2021/04/energía_eolica_interior1-1024x629.jpg" alt="energía_eolica_interior1-molino-viento-campo-sostenibilidad-fuente" title="energía_eolica_interior1-molino-viento-campo-sostenibilidad-fuente" class="imagen"><!-- imagen centrada -->
+            </div>
+            
+            <div class="texto">
+              <h2>Mirando al futuro</h2>
+             <p>Las previsiones apuntan a que cuando finalice el 2020, la capacidad de generación de energía eólica habrá aumentado a pesar de la crisis por el COVID-19. Se espera que se instalen 71,3 GW, lo que supondría una disminución del 6% en el primer trimestre de 2020 con respecto a las previsiones anteriores al coronavirus.</p>  
+             <p>En cuanto a reducción de gases de efecto invernadero a la atmósfera en 2019, las emisiones globales relacionadas con la energía se estabilizaron en torno a las 33 gigatoneladas (Gt). El crecimiento de las energías renovables en la generación de electricidad en las economías avanzadas supuso un ahorro de 130 Megatoneladas (Mt) de emisiones de CO2, siendo la energía eólica la que aglutina la mayor parte del aumento, con una producción que se expandió un 12% con respecto a los niveles de 2018.</p> 
+            
+            <h2>Objetivo: combatir el cambio climático</h2> 
+            <p> Con estas cifras, ¿se alcanzarán los objetivos del Acuerdo de París? Según Ben Backwell, CEO de GWEC, “Si queremos tener alguna posibilidad de alcanzar nuestros objetivos del Acuerdo de París y permanecer en una vía de 1,5 ° C, necesitamos instalar al menos 100 GW de energía eólica anualmente durante la próxima década, y esto debe aumentar a 200 GW anualmente después de 2030 y más allá”, ha asegurado.</p>
+             <p>  Es por ello que la Agencia Internacional de Energías Renovables (IRENA) y el Consejo Global de Energía Eólica (CWEC), han firmado un acuerdo de cooperación para unir esfuerzos destinados a la adopción y despliegue de la energía eólica y renovable en todo el mundo para cumplir con los Acuerdos de París y contribuir a la descarbonización del planeta. Para ello, es necesaria la adopción de cambios en las políticas a desarrollar así como la cooperación a nivel internacional.</p>
+            <p> Las tecnologías renovables como la energía eólica terrestre y marina, así como las medidas de eficiencia energética, pueden reducir en más de un 90% la emisiones de CO2 necesarias para alcanzar los objetivos de 2050, generar puestos de trabajo y reducir con el aumento de la capacidad de energía eólica el coste de la electricidad.</p>
+            </div>
+
+          <a href="/cuestionario" class="btn btn-primary">Ir al cuestionario</a>
+        </section>
+
+          <!-- reforestacion -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- medidas contra incendios -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- hidrocultivo -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- energia solar -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- fauna -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- flora -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- reciclaje -->
+          <section id="reforestacion">
+
+          </section>
+          <!-- planta tu arbol -->
 
 
-
-
-      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
           </a>
