--- a/src/main/resources/templates/arbol.html
+++ b/src/main/resources/templates/arbol.html
@@ -3,11 +3,12 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="/images/logo1">
+    <title>Planetseed</title>
 </head>
 <body>
           <!-- iconos de footer -->
@@ -53,9 +54,14 @@
         </div>
       </nav>
             <!-- Arbol -->
+            <div class="botonregar">
+            <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
+          </div>
             <div class="arbol">
                 <video src="/videos/arbol.mp4" width="700" height="500" controls></video> 
+
             </div>
+
             <!-- Pie de pagina -->
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
