--- a/src/main/resources/templates/contenido.html
+++ b/src/main/resources/templates/contenido.html
@@ -57,109 +57,100 @@
 
       <!-- inicio de contenido -->
 
-      <div class="contenedor">
-      <div class="card">
+    <div class="cajasFlex">    
+      <div class="card contenido">
+
         <img src="/images/eolica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Energia Eolica</h5>
+          <h5 class="card-title" >Energia Eolica</h5>
           <p class="card-text">es la energía que se obtiene a partir del viento, es decir,
- es el aprovechamiento de la energía cinética de las masas de aire.
-</p>
-          <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+ es el aprovechamiento de la energía cinética de las masas de aire.</p>
+
+          <a href="/resumen?valor=1" class="btn btn-primary">Ir al contenido</a>
         </div>
       </div>
 
-      <div class="card">
+      <div class="card contenido">
         <img src="/images/mountain-g140cb5e17_1920.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Reforestacion</h5>
           <p class="card-text">Una operación en el ámbito de la silvicultura destinada a repoblar zonas deforestadas
           
             </p>
-          <a href="/resumen" class="btn btn-primary">Ir al cotenido</a>
+          <a href="/resumen?valor=2" class="btn btn-primary">Ir al cotenido</a>
         </div>
       </div>
       
-      <div class="card">
+      <div class="card contenido">
         <img src="/images/incendio.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Medidas contra incendio</h5>
           <p class="card-text">Ayuda a evitar la destrucción del hábitat de la fauna silvestre y a conservar plantas que generan oxígeno.
             </p>
-          <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+          <a href="/resumen?valor=3" class="btn btn-primary">Ir al contenido</a>
         </div>
       </div>
-    </div>
 
-    <!-- segundo contenedor -->
-
-    <div class="contenedor">
-    <div class="card">
-      <img src="/images/hidrocultivo.jpg" class="card-img-top" alt="...">
+      <div class="card contenido">
+        <img src="/images/hidrocultivo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Hidrocultivo</h5>
         <p class="card-text">"crianza de organismos en agua", 
           relativo al resultado de trabajar y cuidar la tierra para producir planta
           </p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=4" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
 
-    <div class="card">
+    <div class="card contenido">
       <img src="/images/solar" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Energia Solar</h5>
         <p class="card-text">una energía renovable, obtenida a partir del aprovechamiento de la radiación electromagnética procedente del Sol.
         </p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=5" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
     
-    <div class="card">
+    <div class="card contenido">
       <img src="/images/fauna" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Fauna</h5>
         <p class="card-text">Los animales que viven libremente y fuera del control del hombre en ambientes naturales tambien son importantes.
         </p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=6" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
-  </div>
 
-  <!-- tercer contedor -->
-
-  <div class="contenedor">
-    <div class="card">
+    <div class="card contenido">
       <img src="/images/flora" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Flora</h5>
         <p class="card-text">El conjunto de las plantas son propias de un ecosistema que cumplen con un ciclo equilibrado de la vida.
          </p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=7" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
 
-    <div class="card">
+    <div class="card contenido">
       <img src="/images/reciclaje" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Reciclaje</h5>
         <p class="card-text">el proceso de recolección y transformación de materiales para convertirlos en nuevos productos
         </p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=8" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
     
-    <div class="card">
+    <div class="card contenido">
       <img src="/images/arbol" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Como plantar un arbol</h5>
         <p class="card-text">Si llegaste a este, llego la hora de tener tu propia experiencia aportando a cuidar este planeta.</p>
-        <a href="/resumen" class="btn btn-primary">Ir al contenido</a>
+        <a href="/resumen?valor=9" class="btn btn-primary">Ir al contenido</a>
       </div>
     </div>
   </div>
-
-<!-- final de los contenedores -->
 
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
@@ -168,7 +159,8 @@
           </a>
           <span class="text-muted">© 2021 Company, Inc</span>
         </div>
-    
+     
+
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
