--- a/src/main/resources/templates/cuestionario.html
+++ b/src/main/resources/templates/cuestionario.html
@@ -53,7 +53,7 @@
       </nav>
 
 <h1>Aqui ira el cuestionario</h1>
-<a href="/resumen" class="btn btn-primary">volver al resumen</a>
+<a href="/contenido" class="btn btn-primary">volver a contenido</a>
 
 
 
