--- a/src/main/resources/templates/cuestionario.html
+++ b/src/main/resources/templates/cuestionario.html
@@ -38,11 +38,12 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/perfil">Perfil</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/arbol">Arbol</a>
-              </li>
+            
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
               </li>
             </ul>
             <div class="d-flex">
