--- a/src/main/resources/templates/comunidad.html
+++ b/src/main/resources/templates/comunidad.html
@@ -3,15 +3,17 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo1">
+
     <title>Planetseed</title>
 </head>
 <body>
-          <!-- iconos de footer -->
+  
+    <!-- simbolos que pertenece al footer -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
           <title>Bootstrap</title>
@@ -27,7 +29,8 @@
           <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"></path>
         </symbol>
       </svg>
-            <!-- Navegador -->
+      <!-- barra de navegacion -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Planetseed</a>
@@ -36,33 +39,44 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+                 <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/perfil">Perfil</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/arbol">Arbol</a>
-              </li>
+             
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
               </li>
-             
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/communidad">Comunidad</a>
+              </li>
             </ul>
-            <div class="d-flex">
+            <div class="d-flex ">
               <a class="cerrar" href="/">cerrar sesion</a>
             </div>
           </div>
         </div>
       </nav>
-            <!-- Arbol -->
-            <div class="botonregar">
-            <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
+
+      <!-- inicio seccion -->
+      <div class="usuario">
+      <hr class="featurette-divider">
+      <div class="row featurette">
+        <div class="col-md-3 ">
+          <div class="imgPerfil"> 
+            <img src="/images/usuario.png" alt=""> 
           </div>
-            <div class="arbol">
-                <video src="/videos/arbol.mp4" width="700" height="500" controls></video> 
 
-            </div>
-
-            <!-- Pie de pagina -->
+        </div>
+        <div class="col-md-9">
+          <h2 class="featurette-heading">Nombre Apellido, Edad</h2>
+          <div class="verarbol">
+            <a href="#" class="btn btn-success ">Ver arbol <i class="bi bi-heart"></i></a>
+          </div>
+        </div>
+    </div>
+    
+        <!-- inicio del foooter parte de abajo de la pantalla -->
+     
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
           <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
@@ -70,7 +84,6 @@
           </a>
           <span class="text-muted">© 2021 Company, Inc</span>
         </div>
-    
         <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
