--- a/src/main/resources/templates/contenido.html
+++ b/src/main/resources/templates/contenido.html
@@ -39,14 +39,13 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                 <a class="nav-link " aria-current="page" href="/perfil">Perfil</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/arbol">Arbol</a>
-              </li>
+              </li>           
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/contenido">Contenido</a>
               </li>
-             
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
+              </li>
             </ul>
             <div class="d-flex">
               <a class="cerrar" href="/">cerrar sesion</a>
