--- a/src/main/resources/templates/perfil.html
+++ b/src/main/resources/templates/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <link href="/styles/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,11 +42,12 @@
                  <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/perfil">Perfil</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/arbol">Arbol</a>
-              </li>
+            
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="/contenido">Contenido</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/comunidad">Comunidad</a>
               </li>
             </ul>
             <div class="d-flex ">
@@ -57,8 +58,7 @@
       </nav>
 
       <!-- inicio seccion perfil -->
-       <hr class="featurette-divider">
-      <div class="row featurette">
+      <div class="row perfil">
         <div class="col-md-5 ">
           <div class="imagenPerfil"> 
             <img src="/images/usuario.png" alt=""> 
@@ -69,7 +69,16 @@
           <h2 class="featurette-heading">Nombre Apellido, Edad</h2>
           <p class="lead">Resumen de la persona en una descripcion como gustos, hobby, profesion. Opinion propia de la contaminacin y como aporta para cuidar al medio ambiente</p>
         </div>
-        
+      </div>
+    
+             <!-- Arbol -->
+             <div class="botonregar">
+              <a href="#" class="btn btn-success ">Regar <i class="bi bi-heart"></i></a>
+            </div>
+              <div class="arbol">
+                  <video src="/videos/arbol.mp4" width="700" height="500" controls></video> 
+              </div>
+
         <!-- inicio del foooter parte de abajo de la pantalla -->
      
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
